fix: adjust spacing to new font-size & copy for allocation section

--- a/src/components/sections/Allocation/allocation.scss
+++ b/src/components/sections/Allocation/allocation.scss
@@ -1,6 +1,6 @@
 &.allocation-section
 {
-	margin-top: 110px;
+	margin-top: 150px;
 
 	.section-label
 	{
@@ -9,7 +9,7 @@
 
 	.allocation-tabs
 	{
-		margin-top: 20px;
+		margin-top: 49px;
 
 		.tab-headings
 		{
@@ -267,7 +267,7 @@
 						&.c1
 						{
 
-							left: -70px;
+							left: -160px;
 							top: 127px;
 						}
 
@@ -290,7 +290,7 @@
 						{
 							&.c1
 							{
-								left: -120px;
+								left: -210px;
 								top: 136px;
 							}
 						}
